[package]
name = "calculator"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
derive_more = "0.99.17"
ptree = "0.4.0"
r3bl_rs_utils = "0.9.6"
